-
Bug
-
Resolution: Fixed
-
Blocker
-
Lustre 2.4.0
-
3
-
7715
umask handling appears to be broken again on master. With x86_64 servers running 2.3.63-5chaos, and ppc64 clients at either 2.3.58 or 2.3.63, umask does not appear to be honored.
vulcanlac2:/p/lscratchv/morrone$ mkdir foo vulcanlac2:/p/lscratchv/morrone$ touch bar vulcanlac2:/p/lscratchv/morrone$ ls -la total 298 drwx------ 3 morrone morrone 5632 Apr 12 15:51 . drwxr-xr-x 2121 root root 293376 Apr 12 15:05 .. -rw-rw-rw- 1 morrone morrone 0 Apr 12 15:51 bar drwxrwxrwx 2 morrone morrone 5632 Apr 12 15:51 foo vulcanlac2:/p/lscratchv/morrone$ umask 0077
Servers are running ZFS.