LU-3165 ptlrpc: missing fields in mdt_rec_reint

Fields rr_flags_h and rr_umask are missing in mdt_rec_reint, as
may cause swab issue in non-x86 system.

Signed-off-by: Lai Siyao <lai.siyao@intel.com>
Change-Id: I9a7b9a6b2fca6f16a03c48b2ae1ec5eae9852f76
Reviewed-on: http://review.whamcloud.com/6054
Tested-by: Hudson
Reviewed-by: Bobi Jam <bobijam@gmail.com>
Tested-by: Maloo <whamcloud.maloo@gmail.com>
Tested-by: Jian Yu <jian.yu@intel.com>
Reviewed-by: Jian Yu <jian.yu@intel.com>
Reviewed-by: Ned Bass <bass6@llnl.gov>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>